*Empty MediaWiki Message*

--- a/Попов_Геннадий_Иванович.mw
+++ b/Попов_Геннадий_Иванович.mw
@@ -16,13 +16,17 @@
 
 Лöсьöдіс да веськöдлö челядьлы «Ловъя ва» фольклор ансамбльöн. 
 
+Лöсьöдіс коми йöзкостса сьыланкывлысь "Сипертас" народнöй ансамбль.
+
 "Коми гор" телекомпаниякöд дасьтö челядьлы «Дзолюк» радиоуджтас да «Кекӧнач» телеуджтас. 
 
 Попов Г.И. кыдзи йöзкостса мастер вöчалö пуысь да сюмöдысь коми йöзкостса шылада инструментъяс: буксан, зиль–зёль, шур–шар, тотшкöдчан, чипсан, пöлян. Челядькöд вöчалö туис, нянь доз, кöті, сикöтш, юркытш и с.в.
 
+Геннадий Попов водзмöстчöмöн Кöрткерöс районын мунö "Играй, гармонь" конкурс.
+
 == Небöгъяс ==
 Г.И. Поповлöн петöма нин сьыланкыв-кывбура 7 чукöр:
-* Сьыланкывъяс чукöр ([[1996])
+* Сьыланкывъяс чукöр ([[1996]])
 * Кыдзи чужö сьыланкыв ([[1999]])
 * Миян гажа сьыланкыв ([[2006]])
 * Малямуш ([[2006]])
@@ -32,10 +36,14 @@
 == Öшмöс ==
 * ''Макарова Г.'' Дзолюкъяскöд уджын – сöмын шуда лунъяс // [[Йöлöга (газет)|Йӧлӧга]]. [[2012 во]], [[6 кос му|косму тӧлысь 6 лун]], 14 №. 
 * [http://www.nbrkomi.ru/kk/base/raiony/kortkeros/kultura/dekorativno_prikladnoe_iskusstvo/popov_gennadiy_ivanovich/ Коми Республикаса национальнöй библиотека]
+* [http://www.gazeta-respublika.ru/article.php/23870 ''Лысаковская М.'' Геннадий Попов оставил трактор ради детей // Республика, 2009. 18 декабря. № 235]
+* [http://www.tribuna.nad.ru/modules/news/article.php?storyid=7418 ''Макарова Е.'' Коми Страдивари (В его руках «звучит» даже полено) // Трибуна, 2011, 15 апреля.]
 
 [[Категория:Персоналия:Коми]]
 [[Категория:Персоналия анбурӧд]]
 [[Категория:Коми гижысь]]
 [[Категория:Комиын шылад тэчысьяс]]
+[[Категория:Ыджыдвидз]]
+[[Категория:Одыб]]
 
 [[koi:Попов Геннадий Иванович]]
