*Empty MediaWiki Message*

--- a/Выльыб_(Кӧрткерӧс_район).mw
+++ b/Выльыб_(Кӧрткерӧс_район).mw
@@ -1,7 +1,7 @@
 {{Кар-сикт
 |Рӧм                     = Рочму
 |Коми ним                = Выльыб
-|Оригинал ним            = 
+|Оригинал ним            = Выльыб
 |Канпас                  = 
 |Дӧрапас                 = 
 |Му                      = [[Рочму]]
@@ -49,43 +49,64 @@
 |Сайт                    = 
 }}
 
-[[Файл:Выльыб (Кӧрткерӧс район).jpg|250 px|right|thumb|Выльыб - Кӧрткерӧс районса коми грезд (2011 во)]]
+[[Файл:Выльыб (Кӧрткерӧс район).jpg|300 px|right|thumb|Выльыб – Кӧрткерӧс районса коми грезд ([[2011 во]])]]
 
 '''Выльыб''' ({{Lang-ru|Выльыб}}) – [[Коми Республика]]са [[Кöрткерöс район]]ысь [[Ыджыдвидз сикт овмӧдчӧмин]] улö пырысь [[грезд]]. Пуксьöма [[Висер (Эжва вож)|Висер]] юлöн веськыд берегас. Выльыбсянь [[Ыджыдвидз (Кӧрткерӧс район)|Ыджыдвидз]] [[сикт]]öдз – 3 км., [[Кӧрткерӧс]]öдз – 78 км., [[Сыктывкар]]öдз – 126 км.
 
-== Выльыблöн история ==
-Выльыблöн историяыс йитчöма Ыджыдвидз сикт артмöмкöд. Медводдзаысь Ыджыдвидз Вишера погостыс казьтывсьö [[1585]] воö. Вöлöма 3 керка, олöмаöсь Висер юлöн шуйга берегас, öнiя Выльыб весьтын, а местасö шулöмаöсь Кöсьта керöсöн. Мöдар берегас вöлöма паськыд видз. XVII нэмын Висер ю писькöдöма сэтi выль ва туй. 
+== История ==
+Выльыблöн историяыс йитчöма Ыджыдвидз сикт артмöмкöд. Медводдзаысь Ыджыдвидз Вишера погостыс казьтывсьö [[1585 во]]ö. Вöлöма 3 керка, олöмаöсь Висер юлöн шуйга берегас, öнiя Выльыб весьтын, а местасö шулöмаöсь Кöсьта керöсöн. Мöдар берегас вöлöма паськыд видз. XVII нэмын Висер ю писькöдöма сэтi выль ва туй. 
 
 XVII нэм помас ёна ойдлöм вöсна да Висер юлöн ва туй вежсьöм вöсна Кöсьта керöсын олысьяс вуджöмаöсь овны Висер юлöн веськыд берегас. Öтияс овмöдчöмаöсь вывтасiнö, выль ыбъяс вылö – тадзи артмöма Выльыб, мукöдыс – ю кузя улöджык, но дыр кад чöж став олысьсö шуöны ыджыдвидзсаöн. Медводдза вуджысьсö шулöмаöсь «шабалаöн». Веськыд берегас овны вуджöмаöсь дыр кад чöж.
-Выльыб, кыдзи торъя грезд, медводдзаысь казьтывсьö [[1784]] воын. 
+
+Выльыб, кыдзи торъя грезд, медводдзаысь казьтывсьö [[1784 во]]ын. 
 
 Выльыбса овъяс: [[Макаров]], [[Меников]], [[Мишарин]].
 
 == Олысьяслöн лыд ==
-[[1892]]-öд воын Выльыбын олöма 252 морт, [[1916]] воын – 270 морт (51 керка), [[1926]] воын – 262 морт (70 керка), [[1979]] воын – 316 морт, [[1989]] воын – 279, [[2000]] воын – 297, [[2007]] воын – 277.
+{| class='standard' style='text-align: center;'
+! colspan=6 | Олысьяслӧн лыд (СССР-ын да Россияын йӧзӧс пасъялан вояс) 
+|- class='bright'
+! [[1892 во|1892]]
+! [[1916]]
+! [[1926]]
+! [[1979]]
+! [[1989]]
+! [[2000]]
+! [[2007]]
+|-
+| 252
+| 270 
+(51 овмöс)
+| 262 
+(70 овмöс)
+| 316
+| 279
+| 297
+| 277
+|}
 
 == Видз-му овмöс ==
-* [[1929]] – Ыджыдвиддзысь, [[Макарсикт|Макарсиктысь]] да Выльыбысь некымын овмöс пырöмаöсь «Гöрд Октябрь» колхозö. 
+* [[1929]] – Ыджыдвиддзысь, [[Макарсикт (Ыджыдвидз)|Макарсиктысь]] да Выльыбысь некымын овмöс пырöмаöсь «Гöрд Октябрь» колхозö. 
 * [[1932]] – Выльыбын котыртчöма «Фрунзе» колхоз, веськöдлöма И.А. Макаров. 
-* [[1950]] – Ыджыдвидзса 4 колхоз да [[Зулöб|Зулöбса]] «Ударник» нима колхоз öтласисны «Ленин» нима колхозö. 
-* [[1968]] – Ыджыдвидзса «Ленин» колхоз, [[Висер|Висерса]] «Дружба» да «Победа» колхозъяс öтувтчисны «СССР-лы 50 во» совхозö. 
+* [[1950]] – Ыджыдвидзса 4 колхоз да [[Зулӧб (Кӧрткерӧс район)|Зулöбса]] «Ударник» нима колхоз öтласисны «Ленин» нима колхозö. 
+* [[1968]] – Ыджыдвидзса «Ленин» колхоз, [[Висер (Кӧрткерӧс район)|Висерса]] «Дружба» да «Победа» колхозъяс öтувтчисны «СССР-лы 50 во» совхозö. 
 * [[1986]] – торъя Ыджыдвидзса совхоз. 
 
 == Тöдчана лоöмторъяс ==
 * Октябрса револяцияöдз на Педöр Степан Васька земскöй правление отсöгöн кыпöдöма керка, кöнi сэсся восьтöма школа. 
 * Вöлöма мельнича. 
 * Выльыбсянь катыдланьын сулалöма [[часовня]] ([[Прокопей лун]] – сура празьник).
-* Радио кывны кутöма 1952 восянь.
-* Би сетны кутöмаöсь 1958 восянь.
+* Радио кывны кутöма [[1952]] восянь.
+* Би сетны кутöмаöсь [[1958]] восянь.
 * Войнаöдз Выльыбса ягын вöлöма зэкъяслöн баракъяс да вышкаяс, пукалысьясыс пöрöдiсны вöр да кыскалiсны Висер юö. 
 * Грездас вöлöма КБО, медпункт, школа. 
 * Öнi эм садик, кирпичысь клуб, «Висер» видз-му овмöслöн ферма, пилорама.
 
 == Тöдчана йöз ==
-* [[Осипова Зоя]] – Вужвойтырлöн шылада-драмаа театрысь артистка.
+* [[Осипова Зоя Николаевна]] – Вужвойтырлӧн шылада-драмаа театрысь артистка.
 
 == Öшмöсъяс ==
-* [[Жеребцов Игорь Любомирович|''Жеребцов И.Л.'']] Где ты живешь: Населенные пункты Республики Коми. Историко-демографический справочник. – Сыктывкар, [[2000]].
+* [[Жеребцов Игорь Любомирович|''Жеребцов И.Л.'']] Где ты живешь: Населенные пункты Республики Коми. Историко-демографический справочник. – [[Сыктывкар]], [[2000]].
 * ''Панюков И.М.'' Висер вож да сэтчöс олысьяс йылысь пасйöдъяс. – [[Кӧрткерӧс]], [[1999]].
 
 [[Категория:Коми Республикалӧн сиктъяс]]
