*Empty MediaWiki Message*

--- a/Зулӧб_(Кӧрткерӧс_район).mw
+++ b/Зулӧб_(Кӧрткерӧс_район).mw
@@ -1,7 +1,7 @@
 {{Кар-сикт
 |Рӧм                     = Рочму
-|Коми ним                = Выльыб
-|Оригинал ним            = 
+|Коми ним                = Зулӧб
+|Оригинал ним            = Зулэб
 |Канпас                  = 
 |Дӧрапас                 = 
 |Му                      = [[Рочму]]
@@ -52,25 +52,45 @@
 '''Зулöб''' ({{lang-ru|Зулоб}}) – [[Кöрткерöс район]]ысь [[Ыджыдвидз сикт овмӧдчӧмин]] улö пырысь [[грезд]], [[Ыджыдвидз (Кӧрткерӧс район)|Ыджыдвидз]] [[шöрсикт]]сянь 6 км сайын, пуксьöма [[Висер (Эжва вож)|Висерлöн]] веськыд берегас. Зулöбсянь Ыджыдвидз сиктöдз – 6 км., [[Кӧрткерӧс|Кöрткерöсöдз]] – 81 км., [[Сыктывкар]]öдз – 129 км.
 
 == История да олысь лыд ==
-* Грезд чужис XIX нэм пансигöн. Краевед ''Александр Панюков'' серти, 1810 воын татчö овмöдчöмаöсь нин, сэк öти овмöсын олöма 6 морт. Медводдзаöн вужъясьöма [[Висер (Кӧрткерӧс район)|Висерысь]] ''Арсений Ефимович Никифоров''. 
-* [[1825]] воын сы дорö воöма висерса ''Егор Артемьевич Игушев'', [[1830]] воын – сэтысь жö ''Фёдор Захарович Ивашев''. 
-
-* [[1850]]-öд вося ревизия серти, Зулобдинская грездын 3 овмöсын олöма 26 морт.
-
-* [[1859]] вося списокын пасйöма, мый «Зулобдинская (Зулеб-Дин)» грездын вöлöма нин 10 овмöс, 30 морт (14 мужичöй, 16 нывбаба). 
-
-* [[1916]] воын «Зулобдинская»грездын, кодi пырö вöлöм Висер вöлöсьтö, вöлöма 31 овмöс, 161 морт (75 мужичöй, 86 нывбаба). 
-
+* Грезд чужис XIX нэм пансигöн. Краевед ''Александр Панюков'' серти, [[1810 во]]ын татчö овмöдчöмаöсь нин, сэк öти овмöсын олöма 6 морт. Медводдзаöн вужъясьöма [[Висер (Кӧрткерӧс район)|Висерысь]] ''Арсений Ефимович Никифоров''. 
+* [[1825 во]]ын сы дорö воöма висерса ''Егор Артемьевич Игушев'', [[1830 во]]ын – сэтысь жö ''Фёдор Захарович Ивашев''. 
+* [[1850 во|1850]]-öд вося ревизия серти, Зулобдинская грездын 3 овмöсын олöма 26 морт.
+* [[1859 во]]ся списокын пасйöма, мый «Зулобдинская (Зулеб-Дин)» грездын вöлöма нин 10 овмöс, 30 морт (14 мужичöй, 16 нывбаба). 
+* [[1916]] воын «Зулобдинская» грездын, кодi пырö вöлöм [[Висер (Кӧрткерӧс район)|Висер]] вöлöсьтö, вöлöма 31 овмöс, 161 морт (75 мужичöй, 86 нывбаба). 
 * [[1926]] воын Висер вöлöсьтö пырысь «Зулобдинская» грездын вöлöма 40 овмöс, 180 морт (88 мужичöй, 92 нывбаба).
-
-* [[1939]] вося перепись дырйи Висер сикт сöвет улö пырысь Зулöб грездын олöма 270 морт.
-
-* [[1956]] вося списокъясын Зулöб пасйöма Ыджыдвидз сикт сöвет улын нин. 
-
+* [[1939]] вося перепись дырйи [[Висер (Кӧрткерӧс район)|Висер]] сикт сöвет улö пырысь Зулöб грездын олöма 270 морт.
+* [[1956]] вося списокъясын Зулöб пасйöма [[Ыджыдвидз (Кӧрткерӧс район)|Ыджыдвидз]] сикт сöвет улын нин. 
 * 1970-1980-öд воясö Зулöбын олысь лыдыс чинöма: [[1970]] воын вöлöма 187 морт, [[1989]] воын лоöма 143 морт (68 мужичöй, 75 нывбаба). Став олысьыс – коми.
 
-* [[2000]] воын 47 овмöсын олöма 151 морт, [[2007]] воын – 199.
- 
+{| class='standard' style='text-align: center;'
+! colspan=9 | Олысьяслӧн лыд (СССР-ын да Россияын йӧзӧс пасъялан вояс) 
+|- class='bright'
+! [[1850 во|1850]]
+! [[1859 во|1859]]
+! [[1916]]
+! [[1926]]
+! [[1939]]
+! [[1970]]
+! [[1989]]
+! [[2000]]
+! [[2007]]
+|-
+| 26
+(3 овмöс)
+| 30
+(10 овмöс)
+| 161
+(31 овмöс)
+| 180
+(40 овмöс)
+| 270
+| 187
+| 143
+| 151
+(47 овмöс)
+| 199
+|}
+
 == Овъяс ==
 * [[Игушев]], [[Ивашев]], [[Никифоров]].
 
@@ -83,14 +103,15 @@
 * Öнi грездас эм ФАП, клуб, вузасянiн. 
 
 == Тöдчана йöз ==
-* [[Бурдин Михаил Николаевич]] – «[[Зарни ань]]» сьылан котырöн веськöдлысь, [[Коми Республикаса культураын заслуженнöй уджалысь]].
+* [[Бурдин Михаил Николаевич]] ([[1948]]) – [[Зарни ань(ансамбль)|«Зарни ань»]] сьылан котырöн веськöдлысь, [[Коми Республикаса нималана артист]] ([[1982]]), [[Коми Республикаса нимйӧза артист]] ([[2004]]).
 
 == Öшмöсъяс ==
-* [[Жеребцов Игорь Любомирович|''Жеребцов И.Л.'']] Где ты живешь: Населенные пункты Республики Коми. Историко-демографический справочник. – Сыктывкар, 2000.
-* ''Панюков И.М.'' Висер вож да сэтчöс олысьяс йылысь пасйöдъяс. – Кöрткерöс, 1999.
-* Республика Коми. Энциклопедия: В 3-х т. – Сыктывкар, 1997. – Т. 1.
+* [[Жеребцов Игорь Любомирович|''Жеребцов И.Л.'']] Где ты живешь: Населенные пункты Республики Коми. Историко-демографический справочник. – [[Сыктывкар]], [[2000]].
+* ''Панюков И.М.'' Висер вож да сэтчöс олысьяс йылысь пасйöдъяс. – [[Кӧрткерӧс]], [[1999]].
+* Республика Коми. Энциклопедия: В 3-х т. – [[Сыктывкар]], [[1997]]. – Т. 1.
 
 [[Категория:Коми Республикалӧн сиктъяс]]
 [[Категория:Коми сикт-грезд]]
+[[Категория:Ыджыдвидз]]
 
 [[koi:Зулӧб (Кӧрткерӧс район)]]
