*Empty MediaWiki Message*

--- a/Бурдин_Михаил_Николаевич.mw
+++ b/Бурдин_Михаил_Николаевич.mw
@@ -1,15 +1,15 @@
 [[Файл:Бурдин М.Н.JPG|thumb|300px|Бурдин Михаил Николаевич ([[1948]])]]
 
-''' Бурдин Михаил Николаевич ''' ([[1948]]) – [[Зарни Ань (ансамбль)|«Зарни Ань»]] ансамбльӧн веськӧдлысь, Коми Республикаса нимйӧза артист ([[2004]]).
+''' Бурдин Михаил Николаевич ''' ([[1948]]) – [[Зарни Ань (ансамбль)|«Зарни Ань»]] ансамбльӧн веськӧдлысь, [[Коми Республикаса нимйӧза артист]] ([[2004]]).
 
 == Олан туй ==
 * [[1948]] – чужис [[Коми Республика]]ын [[Кӧрткерӧс район]]са [[Ыджыдвидз (Кӧрткерӧс район)|Ыджыдвидз]] [[сикт]] увса [[Зулӧб (Кӧрткерӧс район)|Зулӧб]] [[грезд]]ын. Вит арöсöн бура нин ворсiс гудӧкӧн. Тшöкыда вöлi корöны сиктса гаж да кöлысь вылö. 
-* [[1953]] – Кор Михаил Бурдин вöлi велöдчö 8-öд классын, Зулöбас фольклор чукöртан экспедициö локтiс шылад тэчысь, республикаса музучилищеын велöдысь [[Чисталёв Прометей Ионович|Прометей Чисталев]]. Сiйö кывзiс енбиа гукöкасьысьлысь ворсöмсö да вöзйис водзö велöдчыны. Тайö паныдасьлöм бöрас, бать-мамлысь кывзысьтöг Михаил Бурдин мунöма Коми мулöн [[юркар]]ö велöдчын (кирза сапöгöн, грузовик вылын).
-* Музыкальнöй училище баян класс серти помалöм бöрын Михаил Бурдин босьтiс диплом Н.Римских-Корсаков нима Ленинградса консерватория да бергöдчис [[Сыктывкар]]ö, пырис уджавны Филармонияö солист-инструменталистöн.
+* [[1953]] – Кор Михаил Бурдин вöлi велöдчö 8-öд классын, Зулöбас фольклор чукöртан экспедициö локтiс шылад тэчысь, республикаса музучилищеын велöдысь [[Чисталёв Прометей Ионович|Прометей Чисталев]]. Сiйö кывзiс енбиа гукöкасьысьлысь ворсöмсö да вöзйис водзö велöдчыны. Тайö паныдасьлöм бöрас, бать-мамлысь кывзысьтöг Михаил Бурдин мунöма Коми мулöн [[юркар]]ö велöдчыны (кирза сапöгöн, грузовик вылын).
+* Музыкальнöй училище баян класс серти помалöм бöрын Михаил Бурдин босьтiс диплом Н.Римских-Корсаков нима Ленинградса консерваторияын да бергöдчис [[Сыктывкар]]ö, пырис уджавны Филармонияö солист-инструменталистöн.
 * [[1974]] – лöсьöдiс да веськöдлiс [[Асъя кыа (ансамбль)|Коми АССР-са сьылан да йöктан государственнöй ансамбльын]] йöзкостса инструментъяслöн оркестрöн.
 * [[1991]] – [[Коми Республикаса вужвойтырлӧн шылада-драма театр|Коми Республикаса фольклор театрын]] художественнöй веськöдлысь да директор.
 * [[1995]] – Коми Республикаса «Шондiбан» нима йöзкостса творчестволöн канму шöринын творческöй лабораторияöн веськöдлысь.
-* [[1996]] – веськöдлö профессиональнöй «Зарни Ань» фольклорно-этнографическöй ансамбльöн.
+* [[1996]] – веськöдлö профессиональнöй [[Зарни Ань (ансамбль)|«Зарни Ань»]] фольклорно-этнографическöй ансамбльöн.
 
 == Фестивальяс ==
 «Зарни Ань» ансамблькöд петкöдчис уна фестивальын,  на лыдын:
@@ -17,8 +17,8 @@
 * «Reeddu Reeđđu» («Берегын шторм») [[саамияс|саами]] культуралöн фестиваль ([[2005]], [[Норвегия]]).
 
 == Наградаяс ==
-* Коми Республикаса ниманала артист ([[1982]]).
-* Коми Республикаса нимйӧза артист ([[2004]]) – шылада искусство сöвмöдöмö пай пуктöмысь.
+* [[Коми Республикаса ниманала артист]] ([[1982]]).
+* [[Коми Республикаса нимйӧза артист]] ([[2004]]) – шылада искусство сöвмöдöмö пай пуктöмысь.
 * И.А. Куратов нима Государственнöй премиа босьтысь ([[2011 во]])
 
 == Ыстöдъяс ==
@@ -27,8 +27,9 @@
 * [http://www.komiinform.ru/news/25933 Руководителю ансамбля из Коми «Зарни ань» Михаилу Бурдину присвоено звание народного артиста республики]
 * [http://www.mskomi.ru/n/article.php/4221 Артеев А. Тусовка главного шамана (Михаил Бурдин отпраздновал 60-летие // Молодёжь  Севера, 2008. – № 40. – 2 октября]
 
-[[ru:Бурдин, Михаил Николаевич]]
-
 [[Категория:Персоналия анбурӧд]]
 [[Категория:Персоналия:Коми]]
 [[Категория:Сьылысьяс]]
+[[Категория:Ыджыдвидз]]
+
+[[ru:Бурдин, Михаил Николаевич]]
