--- a/Джиян_(Кӧрткерӧс_район).mw
+++ b/Джиян_(Кӧрткерӧс_район).mw
@@ -97,5 +97,6 @@
 
 [[Категория:Коми Республикалӧн сиктъяс]]
 [[Категория:Коми сикт-грезд]]
+[[Категория:Ыджыдвидз]]
 
 [[koi:Джиян (Кӧрткерӧс район)]]
