--- a/Кулӧмдін.mw
+++ b/Кулӧмдін.mw
@@ -250,6 +250,7 @@
 
 [[Категория:Коми Республикалӧн сиктъяс]]
 [[Категория:Коми сикт-грезд]]
+[[Категория:Кулӧмдiн]]
 
 [[fi:Ust-Kulom]]
 [[it:Ust'-Kulom]]
