--- a/Рассыхаев_Василий_Николаевич.mw
+++ b/Рассыхаев_Василий_Николаевич.mw
@@ -1,17 +1,17 @@
-[[Файл:Рассыхаев В.Н. 4.jpg|250 px|right|thumb|Рассыхаев Василий Николаевич (1922–1990) – коми актёр да гижысь, Коми АССР-са народнöй артист (1971)]]
-[[Файл:Рассыхаев В.Н. 2.jpg|250 px|right|thumb|Коми гижысь Егор Рочевлӧн «Сöстöм ёльяс», ворсöны Василий Рассыхаев да Михаил Красильников]]
-[[Файл:Рассыхаев В.Н. 3.jpg|250 px|right|thumb|Рассыхаев Василий Николаевич (1922–1990) – коми актёр]]
+[[Файл:Рассыхаев В.Н. 4.jpg|500 px|right|thumb|Рассыхаев Василий Николаевич (1922–1990) – коми актёр да гижысь, Коми АССР-са народнöй артист (1971)]]
+[[Файл:Рассыхаев В.Н. 2.jpg|350 px|right|thumb|Коми гижысь Егор Рочевлӧн «Сöстöм ёльяс», ворсöны Василий Рассыхаев да Михаил Красильников]]
+[[Файл:Рассыхаев В.Н. 3.jpg|350 px|right|thumb|Рассыхаев Василий Николаевич (1922–1990) – коми актёр]]
 
-'''Рассыхаев Василий Николаевич''' (комиӧн – '''Микол Вась''') ([[1922]] – [[1990]]) – коми актёр, [[Коми АССР-са народнӧй артист]] ([[1971]]).
+'''Рассыхаев Василий Николаевич''' (комиӧн – '''Микол Вась''') ([[1922]] – [[1990]]) – коми актёр, [[Коми АССР-са нимйӧза артист]] ([[1971]]).
 
 ==Олан туй==
-* [[1922]], [[20 моз|моз 20 лун]] – чужис [[Кулӧмдiн]] [[сикт]]ын.
+* [[1922]], [[20 моз|моз тӧлысь 20 лун]] – чужис [[Кулӧмдiн]] [[сикт]]ын.
 * [[1942]] – помалiс ГИТИС-лысь Коми студия да пырис уджавны [[Коми Республикаса Драма театр]]ö.
-* [[1990]], [[19 вӧльгым|вӧльгым 19 лун]] – кувсис [[Сыктывкар]]ын.
+* [[1990]], [[19 вӧльгым|вӧльгым тӧлысь 19 лун]] – кувсис [[Сыктывкар]]ын.
 
 ==Рольяс==
 '''Василий Рассыхаев''' лöсьöдiс татшöм коми сатираа пертасъяс, кыдзи:
-* Зезегов ([[Юшков Толь Гень|Геннадий Юшковлӧн]] «Бывают же такие», [[1971]]).
+* Зезегов ([[Юшков Геннадий Анатольевич|Геннадий Юшковлӧн]] «Бывают же такие», [[1971]]).
 * Чушкан ([[Леканов Василий Дмитриевич|Василий Лекановлöн]] «Ухабы жизни», [[1969]]).
 * Зинон Фёдорович ([[Горчаков Гений Дмитриевич|Гений Горчаковлöн]] «Волк тундры», [[1977]]). 
 
@@ -27,14 +27,15 @@
 * Герасим ([[Зорин Дмитрий Иванович|Дмитрий Зоринлöн]] «Вечный источник», [[1970]]) да мукöд.
 
 ==Наградаяс ==
-* [[1971]] – сетісны [[Коми АССР-са народнӧй артист]] ним.
+* [[1971]] – [[Коми АССР-са нимйӧза артист]] ним.
 
 ==Öшмöсъяс==
-* Клейн А. ''Рассыхаев В.Н.'' // Энциклопедия Республики Коми. Сыктывкар, [[1998]]. Т. 2.
+* ''Клейн А.'' Рассыхаев В.Н. // Энциклопедия Республики Коми. – [[Сыктывкар]], [[1998]]. – Т. 2.
 * http://foto11.com/komi/vip/rassyhaev.shtml
 
 [[Категория:Персоналия:Коми]]
 [[Категория:Коми ворсысьяс]]
-[[Категория:Коми гижысьяс]]
+[[Категория:Коми гижысь]]
+[[Категория:Кулӧмдiн]]
 
 [[koi:Рассыхаев Василий Николаевич]]
