--- a/Ельцова_Елена_Власовна.mw
+++ b/Ельцова_Елена_Власовна.mw
@@ -40,5 +40,6 @@
 [[Категория:Коми гижысь]]
 [[Категория:Туялысьяс]]
 [[Категория:Коми литература туялысьяс]]
+[[Категория:Кулӧмдiн]]
 
 [[koi:Ельцова Елена Власовна]]
