--- a/Норвег_кыв.mw
+++ b/Норвег_кыв.mw
@@ -11,7 +11,7 @@
 |- bgcolor=silver |
 !P&nbsp;p!!Q&nbsp;q!!R&nbsp;r!!S&nbsp;s!!T&nbsp;t!!U&nbsp;u!!V&nbsp;v!!W&nbsp;w!!X&nbsp;x!!Y&nbsp;y!!Z&nbsp;z!!Æ&nbsp;æ!!Ø&nbsp;ø!!Å&nbsp;å!!&nbsp;
 |-
-||pe||ku||err||ess||te||u||ve||dobbeltve||eks||y ||zett||æ||ø||å||&nbsp;
+||pe||ku||err||ess||te||u||ve||dobbeltve||eks||y ||sett||æ||ø||å||&nbsp;
 |}
 
 == Норскӧн кывбур ==
