*Empty MediaWiki Message*

--- a/Ньянджа_(кыв).mw
+++ b/Ньянджа_(кыв).mw
@@ -1,5 +1,9 @@
 '''Ньянджа''' (''Chinyanja''), либӧ '''чева''' (''Chicheŵa'') — тайӧ Малавиын, Мозамбикын, Замбияын, Зимбабвеын банту кыв, Малавиын да Замбияын официал кыв. Анбур — латин.
 
+== Ньянджа анбур ==
+
+<big>Aa Bb Cc CHch Dd Ee Ff Gg Hh Ii Jj Kk KHkh Ll Mm Nn NGng Ŋŋ (NG'ng') Oo Pp PHph Rr Ss Tt TCHtch THth Uu Vv Ww Ŵŵ Zz</big>
+
 == Лыдакывъяс ==
 
 *modzi – 1
