*Empty MediaWiki Message*

--- a/Тайвания.mw
+++ b/Тайвания.mw
@@ -9,6 +9,7 @@
 [[de:Taiwanien]]
 [[en:Taiwania]]
 [[koi:Тайвания]]
+[[lt:Taiwania cryptomerioides]]
 [[mrj:Тайвани]]
 [[nl:Taiwania]]
 [[no:Taiwaniaslekten]]
