--- a/Пожӧг_(Кулӧмдін_район).mw
+++ b/Пожӧг_(Кулӧмдін_район).mw
@@ -1,50 +1,95 @@
-''' Пожöг''' – [[Коми Республика]]са [[Кулöмдiн район]]ын [[коми]] [[сикт]], [[Пожӧг сикт овмӧдчӧмин]]лöн [[шӧрсикт]]. 
+{{Кар-сикт
+|Рӧм                     = Рочму
+|Коми ним                = Пожӧг
+|Оригинал ним            = Пожег
+|Канпас                  = 
+|Дӧрапас                 = 
+|Му                      = [[Рочму]]
+|Статус                  = сикт
+|Район ним               = район 
+|Регион ним              = республика 
+|Район                   = [[Кулӧмдiн район]]
+|Регион                  = [[Коми республика]]
+|Сюйӧ                    = 
+|Глава                   = 
+|Название главы          = 
+|Панӧм                   = 
+|Медводдза казьтыштӧм    = 1676
+|Прежний нимъяс          = 
+|Кар                     = 
+|Магдебургскӧй инӧд      = 
+|Инлыдпасъяс             = {{coord|||N|||E|type:city}}
+|Мутас                   = 
+|Высота НУМ              = 
+|Максимальная высота     = 
+|Средняя высота          = 
+|Минимальная высота      = 
+|Климат                  = 
+|Кыв                     = [[Коми кыв|коми]], [[Роч кыв|роч]]
+|Кывъяс                  = 
+|Олысьяс                 = 499
+ |Перепись во            = 2007
+ |Олысь лыд              = 
+ |Агломерация            = 
+ |Войтырсикас            = коми, роч
+ |Конфессионал состав    = 
+|Мусерпас                = 
+|Размер карты            =
+|Кар мусерпас            = 
+|Час кытш                = +3
+|Телефон код             = +7 8 2137
+|Пошта индӧс             = 168097
+|Пошта индӧсъяс          = 
+|Автомобиль код          = 11, 111 
+|Карса лун               = 
+|Каръяслӧн мутыслун      = 
+|Категория Commons'ын    = 
+|Прараметр1 ним          = 
+|параметр1               = 
+|Сайт                    = 
+}}
+
+'''Пожӧг''' ({{Lang-ru|Пожег}}) – [[Коми республика|Коми Республикаса]] [[сикт]], [[Кулöмдiн район|Кулöмдiн районысь]] [[Пожӧг сикт овмӧдчӧмин]]са [[шӧрсикт]]. Пожӧг пуксьöма [[Эжва]] юлöн шуйга бокас.
 
 == Этимология ==
 Пожöг ним артмис [[Пожӧг (Эжва вож, Кулӧмдін район)|Пожӧг]] ю нимсянь, код бокö и лэптiсны медводз сиктсö.
 
 == География ==
-
 Пожöг сикт пукалö [[Эжва]] ю бокын, шуйга вадорас, 55 км-ын [[Кулӧмдiн]] сиктсянь катыд, Пожöг ю вомсянь 4 км-ын.
 
 == Олысьяс ==
-
 [[1989]] воын сиктас олiс 539 морт. Медваж овъяс: [[Леканов]], [[Мартюшев]], [[Шахов]], [[Мингалёв]].
 
-Кулöмдiн районса олысьяслы – пожöгсаяс, тайö абу сöмын Пожöг сиктсаяс, но и овмöдчöминö пырысь мукöд [[грезд]]ын олысьяс. А Пожöг овмöдчöминö пырöны: [[Полльӧ (Кулӧмдін район)|Полльӧ]] (Великополье), [[Пожӧгдін (Кулӧмдін район)|Пожӧгдін]], [[Мальӧ (Кулӧмдін район)|Мальӧ]], [[Вомынъюр]], [[Вомынбӧж (Кулӧмдін район)|Вомынбӧж]], [[Шахсикт (Кулӧмдін район)|Шахсикт]], [[Кекур (Кулӧмдін район)|Кекур]]. Водзын ещö татчö жö пыравлiсны [[Вомын (Кулӧмдін район)|Вомын]] да [[Сьӧдтыдін (Кулӧмдін район)|Сьӧдтыдін]]. Сиктъясас олöмыс кусöма нин, йöз сöмын гожöмнас нин турун пуктiгöн овлöны, а нимтысян нимыд сiдзи абу и вушйöма. И артмöдöны тайö сиктъясыс аслыспöлöс семья, быд «челядьлöн» – аслас ним. Оласног сертиыс. Йöз олан сям серти.
+Кулöмдiн районса олысьяслы – пожöгсаяс, тайö абу сöмын Пожöг сиктсаяс, но и овмöдчöминö пырысь мукöд [[грезд]]ын олысьяс. А Пожöг овмöдчöминö пырöны: [[Полльӧ (Кулӧмдін район)|Полльӧ]] (Великополье), [[Пожӧгдін (Кулӧмдін район)|Пожӧгдін]], [[Мальӧ (Кулӧмдін район)|Мальӧ]], [[Вомынъюр (Кулӧмдін район)|Вомынъюр]], [[Вомынбӧж (Кулӧмдін район)|Вомынбӧж]], [[Шахсикт (Кулӧмдін район)|Шахсикт]], [[Кекур (Кулӧмдін район)|Кекур]]. Водзын ещö татчö жö пыравлiсны [[Вомын (Кулӧмдін район)|Вомын]] да [[Сьӧдтыдін (Кулӧмдін район)|Сьӧдтыдін]]. Сиктъясас олöмыс кусöма нин, йöз сöмын гожöмнас нин турун пуктiгöн овлöны, а нимтысян нимыд сiдзи абу и вушйöма. И артмöдöны тайö сиктъясыс аслыспöлöс семья, быд «челядьлöн» – аслас ним. Оласног сертиыс. Йöз олан сям серти.
 
 == История ==
-Со мый висьталöны историческöй документъяс: [[1678]] вося [[Йӧзӧс гижалан небӧг]]ын пасйöма Пожöг сикт йылысь медводдзаысь: «''Починок Усть-Пожег на устье реки Пожег, тому 2 года, поселился Афонька Васильев''...» Артмö, мый медся важ сиктыс – Пожöг. 
+Со мый висьталöны историческöй документъяс: [[1678 во]]ся [[Йӧзӧс гижалан небӧг]]ын пасйöма Пожöг сикт йылысь медводдзаысь: «''Починок Усть-Пожег на устье реки Пожег, тому 2 года, поселился Афонька Васильев''...» Артмö, мый медся важ сиктыс – Пожöг. 
 
-Сы бöрын, [[1720]] воын, чужöма ''Великополье'' сикт. Медводдза олысьясыс – [[роч (войтыр)|роч йöз]], [[Пашнин]]ъяс. 44 во ковмис, медым чужисны мукöд пöчинокъяс: ''Кекур'', ''Шахсикт'', [[Габсикт (Кулӧмдін район)|Габсикт]], ''[[Вомынъюр (Кулӧмдін район)|Вомынъюр]]'', ''Вомынбöж'', ''Мальӧ'', ''Сьӧдтыдiн'', [[Ыба (Кулӧмдін район)|Ыба]]. Пожöг да Великопольеын кö медводдза олысьясыс вöлiны [[роч (войтыр)|роч йöз]], то мукöд сикт нимыс коми нога нин, мый ещö öтчыд тöдчöдö, мый олысьясыс – [[Коми-Зыряна|комияс]]. Видз-му вöдитлöмаöсь да вöравлöмаöсь. Урожайыс омöль вöлöма. Полльӧсалöн сöмын няньныс абуджык кынмавлöма.
+Сы бöрын, [[1720 во]]ын, чужöма ''Великополье'' сикт. Медводдза олысьясыс – [[роч (войтыр)|роч йöз]], [[Пашнин]]ъяс. 44 во ковмис, медым чужисны мукöд пöчинок: ''Кекур'', ''Шахсикт'', [[Габсикт (Кулӧмдін район)|Габсикт]], ''[[Вомынъюр (Кулӧмдін район)|Вомынъюр]]'', ''Вомынбöж'', ''Мальӧ'', ''Сьӧдтыдiн'', [[Ыба (Кулӧмдін район)|Ыба]]. Пожöг да Великопольеын кö медводдза олысьясыс вöлiны [[роч (войтыр)|роч йöз]], то мукöд сикт нимыс коми нога нин, мый нöшта öтчыд тöдчöдö, мый олысьясыс – [[Коми-Зыряна|комияс]]. Видз-му вöдитлöмаöсь да вöравлöмаöсь. Урожайыс омöль вöлöма. Полльӧсалöн сöмын няньныс абуджык кынмавлöма.
  
-Но сиктлöн история оз ло тырвыйööн сиктса [[вичко]] йылысь висьтавтöг. Религия вöлi тöдчана крестьянин олöмын. Вичколöн историяыс Пожöг сиктын зэв дженьыд. Вичко заводитісны лэптыны [[1864]]-öд вося [[31 ӧшым|ӧшым тӧлысь 31 лунö]], а эштöдісны [[1869]] вося [[23 моз|моз тӧлысь 23-öд лунö]]. [[1871]] воын вöлöстьса правление сетіс 49,5 десятина му, бурöс и лекöс. Мусö сетісны прихожана тшöктöм серти. Но сöмын 17 десятина вылын вöлі позьö гöрны. Вичколы вöлі сетöма ''Троицкöй'' ним. Вичко лэптісны ю дорö матын, и сійö тыдалö став грездсянь. Первой сійö вöлі вöчöма керъясысь, но бöрын лэптісны кирпичысь. Сідз жö лэптісны [[часовня]]яс Великопольеын – ''Святого Николая Пречистого'', [[Кырныша (Кулӧмдін район)|Кырнышаын]] – ''Рождества Пресвятой Богородицы''.
+== Вичко ==
+Cиктлöн история оз ло тырвыйööн сиктса [[вичко]] йылысь висьтавтöг. Религия вöлi тöдчана крестьянин олöмын. Вичколöн историяыс Пожöг сиктын зэв дженьыд. Вичко заводитісны лэптыны [[1864 во|1864]]-öд вося [[31 ӧшым|ӧшым тӧлысь 31 лунö]], а эштöдісны [[1869 во]]ся [[23 моз|моз тӧлысь 23-öд лунö]]. [[1871 во]]ын вöлöстьса правление сетіс 49,5 десятина му, бурöс и лекöс. Мусö сетісны прихожана тшöктöм серти. Но сöмын 17 десятина вылын вöлі позьö гöрны. Вичколы вöлі сетöма ''Троицкöй'' ним. Вичко лэптісны ю дорö матын, и сійö тыдалö став грездсянь. Первой сійö вöлі вöчöма керъясысь, но бöрын лэптісны кирпичысь. Сідз жö лэптісны [[часовня]]яс Великопольеын – ''Святого Николая Пречистого'', [[Кырныша (Кулӧмдін район)|Кырнышаын]] – ''Рождества Пресвятой Богородицы''.
 
-Пожöг вичко историяын вöлі сöмын куим поп. [[1869]]–[[1885]] воясö ''Михаил Андреевич Шейтанов''; [[1885]]–[[1896]] воясö ''Александр Сапожников''; [[1896]]–[[1917]] воясö [[Тюрнин Василий Алексеевич|Василий Тюрнин]].
+Пожöг вичко историяын вöлі сöмын куим поп. [[1869 во|1869]]–[[1885 во|1885]] воясö ''Михаил Андреевич Шейтанов''; [[1885 во|1885]]–[[1896 во|1896]] воясö ''Александр Сапожников''; [[1896 во|1896]]–[[1917]] воясö [[Тюрнин Василий Алексеевич|Василий Тюрнин]].
 
-[[1885]] воын вичко бердын том поп Александр Сапожников восьтіс медводдза школа прихожаналы. «[[Вӧлӧгда Епархияса  ведомосьтъяс]]» газет пасйö: «[[1887]] вося [[3 рака|рака тӧлысь 3-öд лунö]] воссис öти класса вичкобердса школа». Сэні велöдісны лыддьысьны, мича гижны (чистописание), [[роч кыв]], вичкоса славяна кыв, "Закон божий".
+[[1885 во]]ын вичко бердын том поп Александр Сапожников восьтіс медводдза школа прихожаналы. «[[Вологодские епархиальные ведомости|Вӧлӧгда Епархияса  ведомосьтъяс]]» газет пасйö: «[[1887 во]]ся [[3 рака|рака тӧлысь 3-öд лунö]] воссис öти класса вичкобердса школа». Сэні велöдісны лыддьысьны, мича гижны (чистописание), [[роч кыв]], вичкоса славяна кыв, "Закон божий".
 
 == Овмöс да транспорт ==
-
 == Культура ==
-
 == Тöдчана йöз ==
-
-* [[Шейтанов Михаил Андреевич]] – сиктса медводдза поп (1869-1885)
-* [[Сапожников Александр]] – поп, восьтiс сиктас медводдза школа (1887)
-
+* [[Шейтанов Михаил Андреевич]] – сиктса медводдза поп (1869 во-1885 во)
+* [[Сапожников Александр]] – поп, восьтiс сиктас медводдза школа (1887 во)
 
 == Öшмöсъяс ==
-
 * [[Жеребцов Игорь Любомирович|Жеребцов И.Л.]] Где ты живешь: Населенные пункты Республики Коми. Историко-демографический справочник. ― [[Сыктывкар]], [[2000]]. 
 * Республика Коми: Энциклопедия в 3 т. ― Сыктывкар, [[1997]]-[[2000]]. ― Т. 1―3.
 
 == Ыстöгъяс ==
-
-[http://www.slideshare.net/guestc3e3f9/ss-1293233 Пожöг да сы гöгöрса сиктъяслöн нимтысян нимъяс]
+* [http://www.slideshare.net/guestc3e3f9/ss-1293233 Пожöг да сы гöгöрса сиктъяслöн нимтысян нимъяс]
 
 [[Категория:Коми Республикалӧн сиктъяс]]
 [[Категория:Коми сикт-грезд]]
 [[Категория:Эжвайыв]]
+[[Категория:Пожӧг]]
 
 [[koi:Пожӧг (Кулӧмдін район)]]
