*Empty MediaWiki Message*

--- a/Кулӧмдін_район.mw
+++ b/Кулӧмдін_район.mw
@@ -480,8 +480,8 @@
 |168082
 |[[Зимстан сикт овмӧдчӧмин]]
 |-
-|[[Шӧрьяг (Кулӧмдін район)|Шӧръяг]]
-|Шэрьяг
+|[[Шӧръяг (Кулӧмдін район)|Шӧръяг]]
+|Шэръяг
 |посёлок
 |241
 |168078
